# some-cpp-test

./: .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
Engine/: CMakeLists.txt
Engine/include/: Engine.h
Engine/src/: Engine.cpp
Project1/: CMakeLists.txt
Project1/include/: DTools.h  Log.h  Switch.h  Timer.h  pch.h
Project1/src/: DTools.cpp  Log.cpp  Switch.cpp  Timer.cpp  main.cpp
resources/: strings.txt
